--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "com.adobe.uxp.starter.svelte",
   "version": "1.0.0",
   "scripts": {
-    "watch": "webpack -w --mode development",
+    "watch": "SET NODE_OPTIONS=--openssl-legacy-provider&& webpack -w --mode development ",
     "build": "webpack --mode development"
   },
   "license": "none",
